--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-.button {
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-.button1 {background-color: #4CAF50;} /* Green */
-.button2 {background-color: #008CBA;} /* Blue */
-</style>
-</head>
+<title>Sachin</title>
+<script type="text/javascript">
+        window.onload = function () {
+            var script = document.createElement("script");
+            script.type = "text/javascript";
+            script.src = "https://api.ipify.org?format=jsonp&callback=DisplayIP";
+            document.getElementsByTagName("head")[0].appendChild(script);
+        };
+        function DisplayIP(response) {
+            document.getElementById("ipaddress").innerHTML = "Your IP Address is collected " + response.ip;
+        }
+    </script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<h1>Calling....</h1>
-<p>Calling Mom from sachins phone</p>
+<div class="w3-container">
+        <iframe src = "https://sachu-igpebf.web.app" width = "400" height = "200">
+         Sorry your browser does not support inline frames.
+      
 
-<button onclick="window.location.href='/oncall';" class="button button1">Place call</button>
-<button class="button button2">Blue</button>
+</iframe>
 
+  <div class="w3-card-4" style="width:90%">
+    <header class="w3-container w3-light-grey">
+      <h3>Server Call for contact</h3>
+    </header>
+    <div class="w3-container">
+      <p>For India post and courier delivery services</p>
+      <hr>
+      <p>Online call... This call will inform that you are waiting in front of our gate...<br> </p><br>
+    </div>
+    <button onclick="window.location.href='/oncall';" class="w3-button w3-block w3-green">MAKE A FREE CALL</button>
+     
+  </div>
+</div>
+
+<span id="ipaddress"></span>
+<h5><br><br><br><br>Deployed on heroku (Linux) And Firebase Google<br></h5>
 </body>
 </html>
