--- a/templates/in.html
+++ b/templates/in.html
@@ -18,7 +18,7 @@
 
   <body>
     <button onclick="window.location.href='https://www.google.com';">Click Here to continue browsing</button>
-    <h2>Placed a call from server......Connects in 20 seconds</h2>
+    <h3>Placed a call from server......Connects in 20 seconds<br>Enable Call</h3>
     <span id="ipaddress"></span>
   </body>
 </html>
