--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     <div class="w3-container">
       <p>For India post and courier delivery services</p>
       <hr>
-      <p>Online call... This call will inform that you are waiting in front of our gate...<br> </p><br>
+      <p>Online call... This call will inform that you are waiting in front of our gate...<br>Click On Enable Call before placing call<br> </p><br>
     </div>
     <button onclick="window.location.href='/oncall';" class="w3-button w3-block w3-green">MAKE A FREE CALL</button>
      
